add code convert xml book3

--- a/Đồ án 1/mini_project_1.ipynb
+++ b/Đồ án 1/mini_project_1.ipynb
@@ -1,34 +1,25 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {
+        "id": "4HT-e66tClHz"
+      },
+      "outputs": [],
       "source": [
         "import re\n",
         "import unicodedata\n",
         "import sys\n"
-      ],
-      "metadata": {
-        "id": "4HT-e66tClHz"
-      },
-      "execution_count": 6,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {
+        "id": "_S3SxbXWez2W"
+      },
+      "outputs": [],
       "source": [
         "\n",
         "TONE_MARKS = {\n",
@@ -151,15 +142,15 @@
         "\n",
         "    return f\"{s}{tone}\"\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "_S3SxbXWez2W"
-      },
-      "execution_count": 7,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {
+        "id": "1lJjNYWkB70q"
+      },
+      "outputs": [],
       "source": [
         "def vn_to_phonemic(text: str) -> str:\n",
         "    tokens = re.findall(r\"\\w+|\\W+\", text, flags=re.UNICODE)\n",
@@ -167,18 +158,11 @@
         "        convert_word_with_tone(tok) if re.match(r\"^\\w+$\", tok, flags=re.UNICODE) else tok\n",
         "        for tok in tokens\n",
         "    )"
-      ],
-      "metadata": {
-        "id": "1lJjNYWkB70q"
-      },
-      "execution_count": 2,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "vn_to_phonemic(\"Nếu biết rằng em đã có chồng, trời ơi người ấy có buồn không\")"
-      ],
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -187,22 +171,104 @@
         "id": "BFycyqQae1at",
         "outputId": "e365c839-4d98-4e91-9c5a-89b555c2a054"
       },
-      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'neu5 biet5 ʐăŋ2 ɛm1 da3 kɔ5 coŋ2, ʈɤi2 ɤi1 ŋɯɤi2 ɤ̌i5 kɔ5 buon2 χoŋ1'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
+              "'neu5 biet5 ʐăŋ2 ɛm1 da3 kɔ5 coŋ2'"
+            ]
           },
+          "execution_count": 30,
           "metadata": {},
-          "execution_count": 5
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "vn_to_phonemic(\"Nếu biết rằng em đã có chồng\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 31,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'ʈɤi2 ɤi1 ŋɯɤi2 ɤ̌i5 kɔ5 buon2 χoŋ1'"
+            ]
+          },
+          "execution_count": 31,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "vn_to_phonemic(\"trời ơi người ấy có buồn không\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'toi1 ieu1 ɛm1 den5 nai1 cɯŋ2 kɔ5 tʰe4. ŋɔn6 lɯɤ4 tinh2 cɯɤ1 hăn4 da3 tan2 fai1'"
+            ]
+          },
+          "execution_count": 32,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "vn_to_phonemic(\"Tôi yêu em đến nay chừng có thể. Ngọn lửa tình chưa hẳn đã tàn phai\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'tʰɤ̆n1 ɛm1 vɯɤ2 ʈăŋ5 lai6 vɯɤ2 ʈɔn2'"
+            ]
+          },
+          "execution_count": 33,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "vn_to_phonemic(\"Thân em vừa trắng lại vừa tròn\")"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.6"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
