--- a/Project_1/source.ipynb
+++ b/Project_1/source.ipynb
@@ -253,7 +253,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "base",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -266,7 +267,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.6"
+      "version": "3.13.5"
     }
   },
   "nbformat": 4,
