--- a/Project_2/source.ipynb
+++ b/Project_2/source.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "id": "813ea471",
    "metadata": {},
    "outputs": [
@@ -19,6 +19,7 @@
     "import re\n",
     "import csv\n",
     "\n",
+    "# Load dữ liệu từ txt\n",
     "DICT_PATH = Path(\"VDic_uni.txt\")\n",
     "\n",
     "def load_dictionary(file_path):\n",
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "id": "c13e91ee",
    "metadata": {},
    "outputs": [
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "id": "d03a49b6",
    "metadata": {},
    "outputs": [
@@ -99,18 +100,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 25,
    "id": "5a6b31f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7994"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Lấy số lượng âm tiết khác nhau\n",
-    "unique_syllables = set(all_syllables)"
+    "unique_syllables = set(all_syllables)\n",
+    "len(unique_syllables)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 26,
    "id": "34b7db04",
    "metadata": {},
    "outputs": [],
@@ -145,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 27,
    "id": "978c3a62",
    "metadata": {},
    "outputs": [],
@@ -168,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 28,
    "id": "45bf182c",
    "metadata": {},
    "outputs": [],
@@ -217,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 29,
    "id": "3a910d1e",
    "metadata": {},
    "outputs": [
